[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenuPart/SamPlayArea.gd" type="Script" id=1]
[ext_resource path="res://font/Built/Ubuntu_B_72.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/SpecialButtoning.png" type="Texture" id=3]

[node name="SamPlayArea" type="VBoxContainer"]
margin_left = 460.0
margin_right = 1460.0
margin_bottom = 114.0
script = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="."]
margin_right = 1000.0
margin_bottom = 94.0
rect_min_size = Vector2( 1000, 90 )
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
flat = true

[node name="TextureRect" type="TextureRect" parent="PlayButton"]
modulate = Color( 0.0862745, 0.717647, 0.764706, 1 )
self_modulate = Color( 0.0627451, 0.890196, 0.698039, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="PlayButton"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.352941, 1, 0.333333, 1 )
text = "Play"
align = 1

[node name="MoreButton" type="Button" parent="."]
margin_top = 102.0
margin_right = 1000.0
margin_bottom = 139.0
text = "More"
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_PlayButton_mouse_entered"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="mouse_entered" from="MoreButton" to="." method="_on_MoreButton_mouse_entered"]
